[gd_scene load_steps=3 format=3 uid="uid://bio3hw8oyem6i"]

[ext_resource type="Script" path="res://scripts/title_menu.gd" id="1_fno74"]
[ext_resource type="Theme" uid="uid://dvflp45ciuk4m" path="res://resources/inventory/button_theme.tres" id="2_e0ef5"]

[node name="TitleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fno74")
button_theme = ExtResource("2_e0ef5")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.5
offset_top = -68.0
offset_right = 56.5
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "To Knighthood"

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.5
offset_right = 20.0
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2

[node name="New" type="Button" parent="MainMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
focus_neighbor_bottom = NodePath("../Load")
theme = ExtResource("2_e0ef5")
text = "New"

[node name="Load" type="Button" parent="MainMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../New")
focus_neighbor_bottom = NodePath("../Exit")
theme = ExtResource("2_e0ef5")
text = "Load"

[node name="Exit" type="Button" parent="MainMenu"]
layout_mode = 2
focus_neighbor_top = NodePath("../Load")
focus_neighbor_bottom = NodePath("../New")
theme = ExtResource("2_e0ef5")
text = "Exit"

[node name="LoadMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SavedGamesButtonContainer" type="GridContainer" parent="LoadMenu"]
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -38.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="LoadMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -28.0
offset_right = 44.0
offset_bottom = -5.0
grow_vertical = 0
theme = ExtResource("2_e0ef5")
text = "Back"

[connection signal="pressed" from="MainMenu/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="MainMenu/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="MainMenu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="LoadMenu/Back" to="." method="_on_back_pressed"]
